BuildHughes/translation-tool/inputs/source_meta/objects/Document_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>Allowed_Orders_Limit__c</fullName>
        <description>Number of orders that can be placed</description>
        <label>Allowed Orders Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCheck_Value__c</fullName>
        <label>CreditCheck Value</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegalAge__c</fullName>
        <label>LegalAge</label>
        <length>10</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>cloValue__c</fullName>
        <label>cloValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Document Type</label>
    <pluralLabel>Document Types</pluralLabel>
</CustomObject>